@@ -284,7 +284,8 @@ static void webKitSettingsSetProperty(GObject* object, guint propId, const GValu
 #if PLATFORM(GTK)
     case PROP_ENABLE_PRIVATE_BROWSING:
         G_GNUC_BEGIN_IGNORE_DEPRECATIONS;
-        webkit_settings_set_enable_private_browsing(settings, g_value_get_boolean(value));
+        if (g_value_get_boolean(value))
+            webkit_settings_set_enable_private_browsing(settings, TRUE);
         G_GNUC_END_IGNORE_DEPRECATIONS;
         break;
 #endif
@@ -2403,6 +2404,8 @@ gboolean webkit_settings_get_enable_private_browsing(WebKitSettings* settings)
 void webkit_settings_set_enable_private_browsing(WebKitSettings* settings, gboolean enabled)
 {
     g_return_if_fail(WEBKIT_IS_SETTINGS(settings));
+
+    g_warning("webkit_settings_set_enable_private_browsing is deprecated and does nothing, use #WebKitWebView:is-ephemeral or #WebKitWebContext:is-ephemeral instead");
 }
 #endif
 
