@@ -200,14 +200,6 @@ static void testWebKitSettings(Test*, gconstpointer)
     webkit_settings_set_default_charset(settings, "utf8");
     g_assert_cmpstr(webkit_settings_get_default_charset(settings), ==, "utf8");
 
-#if PLATFORM(GTK)
-    G_GNUC_BEGIN_IGNORE_DEPRECATIONS;
-    g_assert_false(webkit_settings_get_enable_private_browsing(settings));
-    webkit_settings_set_enable_private_browsing(settings, TRUE);
-    g_assert_true(webkit_settings_get_enable_private_browsing(settings));
-    G_GNUC_END_IGNORE_DEPRECATIONS;
-#endif
-
     g_assert_false(webkit_settings_get_enable_developer_extras(settings));
     webkit_settings_set_enable_developer_extras(settings, TRUE);
     g_assert_true(webkit_settings_get_enable_developer_extras(settings));
