@@ -1,3 +1,12 @@
+2019-10-15  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix GTK test /webkit/WebKitSettings/webkit-settings after r249962.
+
+        Stop testing WebKitSettings:enable-private-browsing.
+
+        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitSettings.cpp:
+        (testWebKitSettings):
+
 2019-10-15  Alicia Boya García  <aboya@igalia.com>
 
         gdb webkit.py: Fix iterator error in Python3
